# HomeWorkBot

./: Cargo.toml  LICENSE  README.md
demo/: 0908-alg-homework.md  0908-eng-homework.md  0912-unrelated-task.md
demo/done/: 0908-phy-homework.md  0925-phy-homework.md
src/: date.rs  lib.rs  main.rs
