[package]
name = "homeworkbot"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
color-eyre = "0.6.2"
regex = "1.9.5"
clap = { version = "4.4.2", features = ["derive"] }
toml = "0.7.8"
serde = "1.0.188"
